--- a/popup/package.json
+++ b/popup/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
@@ -26,7 +27,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "import/no-anonymous-default-export": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -41,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "node-fetch": "^2.6.1",
     "node-sass": "^4.14.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
