style new list form

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "preinstall": "npm install --prefix popup"
+    "preinstall": "npm install --prefix popup",
+    "start": "npm start --prefix popup"
   },
   "repository": {
     "type": "git",
