make lists + sublists drag sortable

--- a/popup/package.json
+++ b/popup/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "array-move": "^3.0.1",
     "bootstrap": "^4.5.3",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
@@ -13,6 +14,7 @@
     "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "react-sortable-hoc": "^1.11.0",
     "reactstrap": "^8.8.1",
     "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
