--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
     "prettier": "^2.2.1",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1"
+  },
+  "dependencies": {
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32"
   }
 }
