--- a/popup/package.json
+++ b/popup/package.json
@@ -9,6 +9,8 @@
     "array-move": "^3.0.1",
     "bootstrap": "^4.5.3",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
