--- a/popup/package.json
+++ b/popup/package.json
@@ -1,7 +1,8 @@
 {
   "name": "popup",
   "version": "0.1.0",
-  "private": true,
+  "main": "./src/index.js",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
@@ -22,6 +23,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -53,6 +55,7 @@
     "node-sass": "^4.14.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "source-map-explorer": "^2.5.2"
   }
 }
