build main page differently as standalone

--- a/popup/.env
+++ b/popup/.env
@@ -1,2 +1,5 @@
 # so webpack in ../node_modules doesn't cause failure
 SKIP_PREFLIGHT_CHECK=true
+REACT_APP_WEBSITE_NAME=Watchlist
+# uncomment to build as standalone webpage
+# REACT_APP_STANDALONE=true
