--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "predeploy": "npm run build --prefix popup",
+    "predeploy": "REACT_APP_STANDALONE=true npm run build --prefix popup",
     "deploy": "gh-pages -d popup/build",
     "format": "prettier --write \"**/**/**/**/*.+(js|json|css)\"",
     "preinstall": "npm install --prefix popup",
